[gd_scene load_steps=14 format=3 uid="uid://dmrlxmov0dffw"]

[ext_resource type="Texture2D" uid="uid://c31akkpni07dm" path="res://assets/sheet/trampolin_spritesheet.png" id="1_3uj6m"]
[ext_resource type="Script" path="res://script/trampoline.gd" id="1_avlrb"]
[ext_resource type="AudioStream" uid="uid://qmtsi7a67ih4" path="res://sons/leather-stress-4-long-97254.wav" id="2_aqnc1"]
[ext_resource type="AudioStream" uid="uid://5vif6q78yliq" path="res://sons/funny-spring-jump-140378.wav" id="3_hxw6c"]

[sub_resource type="Animation" id="Animation_gb2du"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("trampoline_plateau/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13.5)]
}

[sub_resource type="Animation" id="Animation_v23p2"]
resource_name = "depompe"
length = 2.0
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.625, 1.25, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("trampoline_plateau/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.625, 1.25, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 3.44828), Vector2(0, -3.44828), Vector2(0, -6.89655), Vector2(0, -13.7931)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("trampoline_pompe:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q4dx2"]
resource_name = "pompe"
length = 2.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.625, 1.25, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("trampoline_plateau/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.625, 1.25, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -13.5), Vector2(0, -6.89655), Vector2(0, -3.44828), Vector2(0, 3.44828)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("trampoline_pompe:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_thqg8"]
resource_name = "spring"
length = 1.5
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.153846, 0.307692, 0.461538, 0.692308, 0.923077),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 0, 1, 0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("trampoline_plateau/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.153846, 0.307692, 0.461538, 0.692308, 0.923077),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 3.44828), Vector2(0, 3.44828), Vector2(0, -13.7931), Vector2(0, -6.89655), Vector2(0, -13.7931), Vector2(0, -6.89655), Vector2(0, -13.7931)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("trampoline_spring:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mj1t0"]
_data = {
"RESET": SubResource("Animation_gb2du"),
"depompe": SubResource("Animation_v23p2"),
"pompe": SubResource("Animation_q4dx2"),
"spring": SubResource("Animation_thqg8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8pqj"]
size = Vector2(32, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdts5"]
size = Vector2(13.7931, 27.5862)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwy12"]
size = Vector2(27.5862, 3.44828)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnthj"]
size = Vector2(13.7931, 10.3448)

[node name="trampoline" type="CharacterBody2D"]
z_index = 3
scale = Vector2(0.29, 0.29)
collision_layer = 14
collision_mask = 127
script = ExtResource("1_avlrb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3uj6m")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mj1t0")
}

[node name="trampoline_pompe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_aqnc1")

[node name="trampoline_spring" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hxw6c")

[node name="trampoline_plateau" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="trampoline_plateau"]
position = Vector2(0, -13.5)
shape = SubResource("RectangleShape2D_i8pqj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.05533e-07, -10.3448)
shape = SubResource("RectangleShape2D_kdts5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13.7931)
shape = SubResource("RectangleShape2D_iwy12")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(3.083e-07, 18.9655)
shape = SubResource("RectangleShape2D_qnthj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
